--- a/_sass/_team.sass
+++ b/_sass/_team.sass
@@ -14,6 +14,7 @@
 		display: flex
 		align-items: center
 		justify-content: center
+		width: 100%
 		height: 270px
 		padding-left: 5%
 		padding-right: 5%
