comment jobs link and remove chicago office

--- a/_includes/ContactUs.html
+++ b/_includes/ContactUs.html
@@ -10,7 +10,7 @@
             <h4>QUICK LINKS</h4>
             <ul>
                 <li><a href="{{ "/courses/" | prepend: base_url }}">Courses</a></li>
-                <li><a href="https://acklen-avenue.breezy.hr">Jobs</a></li>
+                <!--<li><a href="https://acklen-avenue.breezy.hr">Jobs</a></li>-->
             </ul>
         </div>
         <div class="flex-33 contact">
@@ -18,14 +18,7 @@
             <ul>
                 <li><a href="tel:615-988-4700">(615) 988-4700</a></li>
                 <li class="contact-info-email"><a href="mailto:info@acklenavenue.com;">info@acklenavenue.com</a> </li>
-             </ul>
-             <h4>NASHVILLE</h4>
-            <ul>
                 <li> 1033 Demonbreun Street #300, Nashville, TN 37203 </li>
-             </ul>
-             <h4>CHICAGO</h4>
-            <ul>
-                <li> 171 N Aberdeen St Suite 400, Chicago, IL 60607</li>
              </ul>
         </div>
          <div class="flex-33 followUs">
