--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,25 +1,23 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
-    <title>{{ page.title }}</title>
+    <title>{% if page.title %}{{ page.title }} |{% endif %} Acklen Avenue - Custom software development</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description" content="Acklen Avenue is a team of agile software development professionals who are passionate about clean code and simple user experiences. Nashville, Tennessee" />
-    <meta name="keywords" content="Software Development, Agile, Nashville, Web Apps, Mobile Apps, Desktop Apps" />
+    <meta name="description" content="{{ page.description }}" /> 
+    <meta name="keywords" content="{{ page.keywords }}" /> 
     <meta name="author" content="Acklen Avenue" />
-    <title>Acklen Avenue | Software Development Company</title>
 
     <!-- Facebook -->
     <meta property="og:url"           content="http://acklenavenue.com/" />
     <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="Acklen Avenue" />
-    <meta property="og:description"   content="Software Development Company" />
-    <meta property="og:image"         content="img/thumbnail.jpg" />
-    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:title"         content="{{ page.title }}" />
+    <meta property="og:description"   content="{{ page.description }}" />
+    <meta property="og:image"         content="{{ page.thumbnail }}" />
     <!-- Twitter -->
     <meta name="twitter:card"         content="summary" />
     <meta name="twitter:site"         content="@acklenavenue" />
     <meta name="twitter:creator"      content="@acklenavenue" />
-    <meta name="twitter:image"        content=“/img/thumbnail.jpg” />
+    <meta name="twitter:image"        content="{{ page.thumbnail}}" />
     <!-- Icons -->
     <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
     <meta name="theme-color" content="#72C02C">
