--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -150,7 +150,7 @@ a.tags
 
 .subscribe-form
   width: 100%
-  max-width: 400px
+  min-width: 400px
   display: flex
   flex-direction: column
   justify-content: center
