--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="{{ page.title }}" />
     <meta property="og:description"   content="{{ page.description }}" />
-    <meta property="og:image"         content="{{ "{{ page.thumbnail }}" | prepend: base_url }}" />
+    <meta property="og:image"         content="{{ page.thumbnail }}" />
     <!-- Twitter -->
     <meta name="twitter:card"         content="summary" />
     <meta name="twitter:site"         content="@acklenavenue" />
