fix metadata tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,15 +9,16 @@
 
     <!-- Facebook -->
     <meta property="og:url"           content="http://acklenavenue.com/" />
-    <meta property="og:type"          content="website" />
+    <meta property="og:type"          content="{{ page.type }}" />
     <meta property="og:title"         content="{{ page.title }}" />
     <meta property="og:description"   content="{{ page.description }}" />
     <meta property="og:image"         content="{{ page.thumbnail }}" />
+    <meta property="og:image:width" content="1280" />
     <!-- Twitter -->
     <meta name="twitter:card"         content="summary" />
     <meta name="twitter:site"         content="@acklenavenue" />
     <meta name="twitter:creator"      content="@acklenavenue" />
-    <meta name="twitter:image"        content="{{ page.thumbnail}}" />
+    <meta name="twitter:image"        content="{{ page.thumbnail }}" />
     <!-- Icons -->
     <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
     <meta name="theme-color" content="#72C02C">
