--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,9 @@
     <meta property="og:title"         content="{{ page.title }}" />
     <meta property="og:description"   content="{{ page.description }}" />
     <meta property="og:image"         content="{{ page.thumbnail }}" />
-    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="fb:app_id" content="170519399720897">
     <!-- Twitter -->
     <meta name="twitter:card"         content="summary" />
     <meta name="twitter:site"         content="@acklenavenue" />
