--- a/_includes/head-subfolder.html
+++ b/_includes/head-subfolder.html
@@ -1,27 +1,31 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
-    <title>{{ page.title }}</title>
+    <title>{% if page.title %}{{ page.title }} |{% endif %} Acklen Avenue - Custom software development</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description" content="Acklen Avenue is a team of agile software development professionals who are passionate about clean code and simple user experiences. Nashville, Tennessee" />
-    <meta name="keywords" content="Software Development, Agile, Nashville, Web Apps, Mobile Apps, Desktop Apps" />
+    <meta name="description" content="{{ page.description }}" /> 
+    <meta name="keywords" content="{{ page.keywords }}" /> 
     <meta name="author" content="Acklen Avenue" />
-    <title>Acklen Avenue | Software Development Company</title>
 
     <!-- Facebook -->
-    <meta property="og:url"           content="http://acklenavenue.com/" />
-    <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="Acklen Avenue" />
-    <meta property="og:description"   content="Software Development Company" />
-    <meta property="og:image"         content="../img/thumbnail.jpg" />
-    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+    <meta property="og:type" content="{{ page.type }}" />
+    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+    <meta property="og:description" content="{{ page.description }}" />
+    <meta property="og:image" content="{{ page.thumbnail }}" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
+    {% if page.is_post %}
+    <meta property="og:site_name" content="{{ site.title }}" />
+    {% endif %}
+    
     <!-- Twitter -->
     <meta name="twitter:card"         content="summary" />
     <meta name="twitter:site"         content="@acklenavenue" />
     <meta name="twitter:creator"      content="@acklenavenue" />
-    <meta name="twitter:image"        content=“../img/thumbnail.jpg” />
+    <meta name="twitter:image"        content="{{ page.thumbnail }}" />
     <!-- Icons -->
-    <link rel="icon" href="../img/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
     <meta name="theme-color" content="#72C02C">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="../css/main.css">
@@ -36,5 +40,16 @@
       ga('create', 'UA-42413832-1', 'auto');
       ga('send', 'pageview');
 
+    </script>
+    <!-- Hotjar Tracking Code for https://acklenavenue.com/ -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:962036,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
 </head>
