--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,14 +8,17 @@
     <meta name="author" content="Acklen Avenue" />
 
     <!-- Facebook -->
-    <meta property="og:url"           content="http://acklenavenue.com/" />
-    <meta property="og:type"          content="{{ page.type }}" />
-    <meta property="og:title"         content="{{ page.title }}" />
-    <meta property="og:description"   content="{{ page.description }}" />
-    <meta property="og:image"         content="{{ page.thumbnail }}" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="fb:app_id" content="170519399720897">
+    <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+    <meta property="og:type" content="{{ page.type }}" />
+    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+    <meta property="og:description" content="{{ page.description }}" />
+    <meta property="og:image" content="{{ page.thumbnail }}" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
+    {% if page.is_post %}
+    <meta property="og:site_name" content="{{ site.title }}" />
+    {% endif %}
+    
     <!-- Twitter -->
     <meta name="twitter:card"         content="summary" />
     <meta name="twitter:site"         content="@acklenavenue" />
@@ -37,6 +40,17 @@
       ga('create', 'UA-42413832-1', 'auto');
       ga('send', 'pageview');
 
+    </script>
+        <!-- Hotjar Tracking Code for https://acklenavenue.com/ -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:962036,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
 
     <!-- JS -->
