Updating team photo and Tommy's position

--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -364,7 +364,7 @@ header
     -moz-border-radius: $radius
 
   .facts__photo
-    background-image: url('../img/facts-background.jpg')
+    background-image: url('../img/facts-background-2018.jpg')
     background-size: cover
     min-height: 430px
     border-radius: $radius
