Updating cover with recent photo

--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -1,5 +1,5 @@
 header
-  background: $slate-purple url(../img/bg-photo.jpg) no-repeat center bottom
+  background: $slate-purple url(../img/bg-photo-2018.jpg) no-repeat center bottom
   background-size: cover
   min-height: 800px
 
@@ -364,7 +364,7 @@ header
     -moz-border-radius: $radius
 
   .facts__photo
-    background-image: url('../img/facts-background-2018.jpg')
+    background-image: url('../img/facts-background.jpg')
     background-size: cover
     min-height: 430px
     border-radius: $radius
