--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,7 +41,8 @@
       ga('send', 'pageview');
 
     </script>
-        <!-- Hotjar Tracking Code for https://acklenavenue.com/ -->
+    
+    <!-- Hotjar Tracking Code for https://acklenavenue.com/ -->
     <script>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -52,7 +53,8 @@
             a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
-    <!-- Facebook Pixel Code -->
+   
+   <!-- Facebook Pixel Code -->
     <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -60,17 +62,15 @@
     if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
     n.queue=[];t=b.createElement(e);t.async=!0;
     t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window,document,'script',
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-     fbq('init', '2089986414654137'); 
+    fbq('init', '691572244199399');
     fbq('track', 'PageView');
-    </script>
-    <noscript>
-     <img height="1" width="1" 
-    src="https://www.facebook.com/tr?id=2089986414654137&ev=PageView
-    &noscript=1"/>
-    </noscript>
-    <!-- End Facebook Pixel Code -->
+   </script>
+   <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=691572244199399&ev=PageView&noscript=1"
+   /></noscript>
+   <!-- End Facebook Pixel Code -->
 
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
