change caption style

--- a/_includes/drillnomics-case-study.html
+++ b/_includes/drillnomics-case-study.html
@@ -9,7 +9,7 @@
 </section>
 <section class="showcase">
     <img src="{{ "/img/drillnomic-laptop-2.png" | prepend: base_url }}" alt="pixl device">
-    <small>drillnomics dashboard</small>
+    <p>drillnomics dashboard</p>
 </section>
 <section class="text-block text-block--small">
     <h2>The Approach</h2>
