--- a/_includes/hurdl-case-study.html
+++ b/_includes/hurdl-case-study.html
@@ -6,11 +6,11 @@
 </section>
 <section class="showcase ">
     <img class="showcase__hurdl--pixl" src="{{ "/img/pixl-device.png" | prepend: base_url }}" alt="pixl device">
-    <small>Pixl Device</small>
+    <p>Pixl Device</p>
 </section>
 <section class="text-block text-block--small">
     <h2>The Challenge</h2>
-    <p class="text-block--centered">Hurdl was able to custom program their wearables (Pixl) but they were not able to conduct surveys of users or send configuration data from the cloud to the user.</p>
+    <p class="text-block--centered">Hurdl was able to custom program their wearables (Pixl)but they were not able to conduct surveys of users or send configuration data from the cloud to the user.</p>
 </section>
 <section class="approach">
     <h2>The Approach</h2>
@@ -31,7 +31,8 @@
 </section>
 <section class="showcase">
     <img class="showcase__hurdl--raspberry" src="{{ "/img/raspberry_limeball.png" | prepend: base_url }}" alt="">
-    <div class="showcase__caption"><small>We built the Hurdle Antenna Interface. A bridge between the registration database, a DMX Console and the Pixls.</small></div>
+    <div class="showcase__caption"><p>We built the Hurdle Antenna Interface. A bridge between</p>
+                                <p> the registration database, a DMX Console and the Pixls.</p></div>
 </section>
 <section class="theEvolution--hurdl">
     <div class="theEvolution--hurdl__box">
@@ -68,7 +69,7 @@
     <div class="screens--hurdl">
         <img src="{{ "/img/hurdl-dashboard-1.png" | prepend: base_url }}" alt="">
         <div class="screens--hurdl__caption">
-            <small>Users can manage SMS questions and events preferences through the platform in real-time </small>
+            <p>Users can manage SMS questions and events preferences through the platform in real-time </p>
         </div>
         <div class="screens--hurdl__twoScreens">
             <img class="screens--hurdl__twoScreens__one" src="{{ "/img/hurdl-dashboard-3.png" | prepend: base_url }}" alt="">
