--- a/_includes/tafs-case-study.html
+++ b/_includes/tafs-case-study.html
@@ -6,7 +6,7 @@
 </section>
 <section class="showcase">
 	<img src="{{ "/img/tafs-app.png" | prepend: base_url }}" alt="pixl device">
-	<small>Tafs Mobile App</small>
+	<p>Tafs Mobile App</p>
 </section>
 <section class="text-block text-block--small">
 	<h2>The Challenge</h2>
