--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,6 +9,8 @@
 
     ga('create', 'UA-42413832-1', 'auto');
     ga('send', 'pageview');
+    ga('send', 'event', 'Contact', 'viewed', 'form');
+    ga('send', 'event', 'Contact', 'submit', 'form');
 
 </script>
 
