--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -484,6 +484,12 @@ header
     font-weight: bold
     padding: 40px 45px 20px
 
+#contact-form
+  & .flex-direction
+    flex-direction: column
+  & .recapcha-wrapper
+    margin: 10px 8px
+
 @media (min-width: $screen-xm-min) and (max-width: $screen-sm-min)
   header .hero-header
     &__phrase span
@@ -572,7 +578,6 @@ header
   #contact-form
     & .flex-direction
       flex-direction: column
-
 
 
 
