--- a/_includes/ContactUs.html
+++ b/_includes/ContactUs.html
@@ -17,7 +17,7 @@
             <h4>CONTACT</h4>
             <ul>
                 <li><a href="tel:615-988-4700">(615) 988-4700</a></li>
-                <li class="contact-info-email"><a href="mailto:info@acklenavenue.com;">info@acklenavenue.com</a> </li>
+                <li class="contact-info-email"><a href="mailto:&#105;&#110;&#102;&#111;&#064;&#097;&#099;&#107;&#108;&#101;&#110;&#097;&#118;&#101;&#110;&#117;&#101;&#046;&#099;&#111;&#109;;">&#105;&#110;&#102;&#111;&#064;&#097;&#099;&#107;&#108;&#101;&#110;&#097;&#118;&#101;&#110;&#117;&#101;&#046;&#099;&#111;&#109;</a> </li>
                 <li> 1033 Demonbreun Street #300, Nashville, TN 37203 </li>
              </ul>
         </div>
