--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -65,6 +65,9 @@
 </noscript>
 <!-- End Linkedin Pixel Code -->
 
+<!-- recapcha-->
+<script src='https://www.google.com/recaptcha/api.js'></script>
+
 <!-- JS -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script>
