google analytics fix events and add jobs link

--- a/_includes/ContactUs.html
+++ b/_includes/ContactUs.html
@@ -10,7 +10,7 @@
             <h4>QUICK LINKS</h4>
             <ul>
                 <li><a href="{{ "/courses/" | prepend: base_url }}">Courses</a></li>
-                <!--<li><a href="https://acklen-avenue.breezy.hr">Jobs</a></li>-->
+                <li><a href="https://acklen-avenue.breezy.hr/p/69c795a18db7-future-acklener">Jobs</a></li>
             </ul>
         </div>
         <div class="flex-33 contact">
