align recaptcha in the form

--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -489,6 +489,7 @@ header
     flex-direction: column
   & .recapcha-wrapper
     margin: 10px 8px
+    align-items: center
 
 @media (min-width: $screen-xm-min) and (max-width: $screen-sm-min)
   header .hero-header
