add job board and description templates & performance improvements

--- a/css/main.sass
+++ b/css/main.sass
@@ -332,5 +332,6 @@ input[type="submit"]:disabled
 @import _ourwork
 @import _casestudies
 @import _courses
+@import _jobs
 @import _404
 @import _team
