--- a/_includes/scripts-subfolder.html
+++ b/_includes/scripts-subfolder.html
@@ -69,7 +69,7 @@
 	window.jQuery || document.write('<script src="../js/jquery.min.js"><\/script>')
 </script>
 <script src="../js/main.js"></script>
-<script type="text/javascript" src="js/blog.js"></script>
-<script type="text/javascript" src="js/md5.min.js"></script>
+<script type="text/javascript" src="/js/blog.js"></script>
+<script type="text/javascript" src="/js/md5.min.js"></script>
 <script src="../js/classie.js"></script>
 <script src="../js/modalEffects.js"></script>
