Added configuration for job openings collection

--- a/_includes/head-subfolder.html
+++ b/_includes/head-subfolder.html
@@ -3,8 +3,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
     <title>{% if page.title %}{{ page.title }} |{% endif %} Acklen Avenue - Custom software development</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description" content="{{ page.description }}" /> 
-    <meta name="keywords" content="{{ page.keywords }}" /> 
+    <meta name="description" content="{{ page.description }}" />
+    <meta name="keywords" content="{{ page.keywords }}" />
     <meta name="author" content="Acklen Avenue" />
 
     <!-- Facebook -->
@@ -18,17 +18,17 @@
     {% if page.is_post %}
     <meta property="og:site_name" content="{{ site.title }}" />
     {% endif %}
-    
+
     <!-- Twitter -->
     <meta name="twitter:card"         content="summary" />
     <meta name="twitter:site"         content="@acklenavenue" />
     <meta name="twitter:creator"      content="@acklenavenue" />
     <meta name="twitter:image"        content="{{ page.thumbnail }}" />
     <!-- Icons -->
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon"/>
     <meta name="theme-color" content="#72C02C">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
-	<link rel="stylesheet" type="text/css" href="../css/modal.css" />
-    
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+	<link rel="stylesheet" type="text/css" href="/css/modal.css" />
+
 </head>
