Modified job openings titles

--- a/_layouts/job-opening.html
+++ b/_layouts/job-opening.html
@@ -30,7 +30,7 @@ layout: acklen-subfolder
         </p>
     </section>
     <section class="text-block">
-        <h3>Software Developer responsibilities are:</h3>
+        <h3>Responsibilities:</h3>
         <ul class="check">
             {% for responsibility in page.responsibilities %}
                 <li>
@@ -40,7 +40,7 @@ layout: acklen-subfolder
         </ul>
     </section>
     <section class="text-block">
-        <h3>Software Developer requirements are:</h3>
+        <h3>Requirements:</h3>
         <ul class="check">
             {% for requirement in page.requirements %}
                 <li>
