update course info

--- a/_includes/coursesList.html
+++ b/_includes/coursesList.html
@@ -6,7 +6,7 @@
       <div class="course__description">
         <div class="flex-33">
           <h4>Instructor</h4>
-          <p>Dante Dubón</p>
+          <p>Byron Sommardahl</p>
         </div>
         <div class="flex-33">
           <h4>Duration</h4>
