SEO optimization changes (#285)
* Update team.json

* Started changing pages descriptions, added cannonical link to layouts so it is present on all pages

* Removed duplicate title tags

* Added missing descriptions

* Fixed all 'title too long' issues, removed extra title from head and head-subfolder include to prevent duplicate titles

* Renamed some posts to prevent too long urls, fixed js path in includes to prevent 4xx errors, fixed job openings description design

* Fixed 4xx errors

--- a/_includes/head-subfolder.html
+++ b/_includes/head-subfolder.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
-    <title>{% if page.title %}{{ page.title }} |{% endif %} Acklen Avenue - Custom software development</title>
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ "Acklen Avenue - Custom software development" }}{% endif %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="{{ page.description }}" />
     <meta name="keywords" content="{{ page.keywords }}" />
@@ -18,7 +18,7 @@
     {% if page.is_post %}
     <meta property="og:site_name" content="{{ site.title }}" />
     {% endif %}
-
+    <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
     <!-- Twitter -->
     <meta name="twitter:card"         content="summary" />
     <meta name="twitter:site"         content="@acklenavenue" />
