--- a/_includes/workForYou.html
+++ b/_includes/workForYou.html
@@ -27,7 +27,7 @@
 	                <p>We run alongside your team to deliver quality consistently, owning the project and its success.</p>
 	                <hr>
 					<h4>Things you should read:</h4>
-					<a class="hvr-icon-forward" href={{ "/an-experiment-done-very-right.html" | prepend: base_url }}>An experiment done very right</a>
+					<a class="hvr-icon-forward" href={{ "/an-experiment-done-very-right" | prepend: base_url }}>An experiment done very right</a>
 				</div>
 
             </div>
@@ -43,7 +43,7 @@
 	                <p>We're no "rent-a-dev." We are your in-house dedicated team, within our ecosystem of technological support and expertise.</p>
 	                <hr>
 					<h4>Things you should read:</h4>
-					<a class="hvr-icon-forward" href={{ "/three-questions-to-ask-when-starting-a-development-project.html" | prepend: base_url }}>Starting a development project</a>
+					<a class="hvr-icon-forward" href={{ "/three-questions-when-starting-a-development-project" | prepend: base_url }}>Starting a development project</a>
 
 				</div>
             </div>
@@ -59,7 +59,7 @@
                 	<p>We are built for scalability: start with one team and flex up to two or three based on priorities and budget. Either way, we are owning the project and getting you to ROI sooner than you thought possible.</p>
                		<hr>
 					<h4>Things you should read:</h4>
-					<a class="hvr-icon-forward" href={{ "/5-secrets-to-quality-software-delivery.html" | prepend: base_url }}>5 secrets to quality software delivery</a>
+					<a class="hvr-icon-forward" href={{ "/5-secrets-to-quality-software-delivery" | prepend: base_url }}>5 secrets to quality software delivery</a>
 				</div>
             </div>
 	</div>
