SEO text changes

--- a/_includes/drivenByPassion.html
+++ b/_includes/drivenByPassion.html
@@ -46,7 +46,7 @@ you want <span>simple</span>, <span>trustworthy</span>, <span>consistent</span>,
 				</div>
 			</div>
 			<div class="back">
-				<p>Clean, high-quality code is critical for scalability and maintainability, but it requires unfailing commitment. Our practices and standards are best-in-class, and we don't compromise them.</p>
+				<p>Clean, high-quality code is critical for scalability and maintainability, but it requires unfailing commitment. Our custom software development practices and standards are best-in-class, and we don't compromise them.</p>
 			</div>
 		</div>
 	</div>
