--- a/_includes/factsAndTech.html
+++ b/_includes/factsAndTech.html
@@ -13,7 +13,7 @@
   <div class="tech">
     <div class="tech__content flex-50">
       <h2>Technologies</h2>
-      <p class="tech__description">Most of our work is in these technologies, but our broad skill set
+      <p class="tech__description">Most of our custom software services work is in these technologies, but our broad skill set
         gives us the flexibility to explore and choose the right technology
         for each project.
       </p>
