--- a/_includes/testimonialsHome.html
+++ b/_includes/testimonialsHome.html
@@ -4,7 +4,7 @@
 		<h3>Zach Shunk</h3>
 		<h4 class="testimonial-founder">Co-Founder / CTO at Hurdl Enterprises</h4>
 		<span class="quotesign">&#8220;</span>
-		<p><em>Acklen Avenue has their clients' best interests at heart. They take ownership. They're a great team and tool: they make software make sense.</em></p>
+		<p><em>Acklen Avenue has their clients' best interests at heart. They take ownership. They're a great team and tool: they make software development make sense.</em></p>
 		<a class="hvr-icon-forward md-trigger" data-modal="modal-13" >Talk to us</a>
 	</div>
 </section>
