--- a/_includes/workForYou.html
+++ b/_includes/workForYou.html
@@ -34,7 +34,7 @@
             <div id="panel2" class="panel active">
                 <h4>About you:</h4>
                 <ul class="check">
-                	<li><span>You see opportunity that you know you could capture today if you had the right team.</span></li>
+                	<li><span>You see opportunity that you know you could capture today if you had the right team of software developers.</span></li>
                 	<li><span>You know that development is complicated and risky — maybe you've even been burned before.</span> </li>
                 	<li><span>You're not looking for an order taker. You need a trusted partner who brings expertise and insight to technology decisions.</span></li>
                 	<li><span>You feel the tension between budget and risk mitigation.</span></li>
@@ -43,7 +43,7 @@
 	                <p>We're no "rent-a-dev." We are your in-house dedicated team, within our ecosystem of technological support and expertise.</p>
 	                <hr>
 					<h4>Things you should read:</h4>
-					<a class="hvr-icon-forward" href={{ "/three-questions-when-starting-a-development-project" | prepend: base_url }}>Starting a development project</a>
+					<a class="hvr-icon-forward" href={{ "/three-questions-when-starting-a-development-project" | prepend: base_url }}>Starting a software development project</a>
 
 				</div>
             </div>
