add kerri davis testimonial

--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -229,7 +229,7 @@ header
     position: absolute
     z-index: -1
     width: 100%
-    min-height: 500px
+    min-height: 600px
     top: 30px
     left: 0
     transform: skewY(6deg)
@@ -240,6 +240,11 @@ header
 
   & .testimonial__contain
     max-width: 640px
+    margin: 0 auto
+    text-align: center
+  
+  & .testimonial__contain--wide
+    max-width: 1040px
     margin: 0 auto
     text-align: center
 
@@ -523,7 +528,7 @@ header
       font-size: $normal
 
   #testimonialSingle:before
-    min-height: 640px
+    min-height: 620px
     top: 80px
 
   #workForYou
@@ -595,7 +600,7 @@ header
     padding: 120px 0px 20px
 
   #testimonialSingle:before
-    min-height: 550px
+    min-height: 600px
     top: 50px
 
   #factsAndTech
