--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -10,7 +10,7 @@
 		<li><a href="{{ "/our-work/" | prepend: base_url }}">Our Work</a></li>
 		<li><a href="{{ "/team.html" | prepend: base_url }}">Team</a></li>
 		<li><a href="{{ "/blog.html" | prepend: base_url }}">Blog</a></li>
-		<li><a class="md-trigger" data-modal="modal-13">Say Hello</a></li>
+		<li><a id="say-hello" class="md-trigger" data-modal="modal-13">Say Hello</a></li>
 	</ul>
 </nav>
 
