--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -83,3 +83,11 @@
 <script src="js/main.js"></script>
 <script src="js/classie.js"></script>
 <script src="js/modalEffects.js"></script>
+
+<!--say hello link-->
+<script type="text/javascript">
+    (function () {
+        document.getElementById("say-hello").onclick=function(){ Intercom('show'); }
+        document.getElementById("start-conversation").onclick=function(){ Intercom('show'); }
+    })();
+</script>  
