--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -86,6 +86,7 @@
 <!--say hello link-->
 <script type="text/javascript">
     (function () {
-        $(".open-intercom").click(function(){ Intercom('show'); });       
+        $(".open-intercom").click(function(){ Intercom('show'); });  
+        $(".md-trigger").click(function(){ Intercom('show'); });  
     })();
 </script>  
