--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -12,15 +12,6 @@
 
 </script>
 
-<!-- Intercom.io -->
- <script>
-  window.intercomSettings = {
-    app_id: "wta4t3f8"
-  };
-</script>
-<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/wta4t3f8';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
-<!-- END Intercom -->
-
 <!-- Hotjar Tracking Code for https://acklenavenue.com/ -->
 <script>
     (function (h, o, t, j, a, r) {
@@ -83,7 +74,16 @@
 <script src="js/main.js"></script>
 <script src="js/classie.js"></script>
 
-<!--say hello link-->
+<!-- Intercom.io -->
+ <script>
+  window.intercomSettings = {
+    app_id: "wta4t3f8"
+  };
+</script>
+<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/wta4t3f8';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
+<!-- END Intercom -->
+
+<!--CTA Links open intercom-->
 <script type="text/javascript">
     (function () {
         $(".md-trigger").click(function(){ Intercom('show'); });  
