--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: blogHome
     	    {{ page.content | unindent | markdownify }}
 		</markdown>
 
-		{% include signUp.html %}
+		<!--{% include signUp.html %}-->
     </div>
 
     {% include postRelateds.html %}
