--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,7 @@ layout: blogHome
 		</markdown>
 
 		<!--{% include signUp.html %}-->
+		{% include post-cta.html %}
     </div>
 
     {% include postRelateds.html %}
