--- a/_includes/post-cta.html
+++ b/_includes/post-cta.html
@@ -1,16 +1,5 @@
 
 <section class="subscribe-box">
-	<div id="subscribe-labels">
-		<h4>What can we build for you?</h4>
-		<p>We are excited to get to know you and what you're working on. Are we the right fit for your project? Let's talk to find out!</p>
-	</div>
-
-	<div id="subscribe-front">
-			<div class="center-wrapper">
-				<input id="button-form" type="submit" value="Let's Talk"
-						class="btn btn--apple hvr-ripple-out md-trigger" />
-			</div>
-	</div>
-  
-	<small>No Spam Ever</small>
+	<h3 class="teamStructure__cta">Like What You Hear?</h3>
+	<a class="btn btn--apple hvr-ripple-out md-trigger" data-modal="modal-13">Let's Talk</a>
 </section>
