--- a/_includes/post-cta.html
+++ b/_includes/post-cta.html
@@ -1,5 +1,5 @@
 
 <section class="subscribe-box">
-	<h3 class="teamStructure__cta">Like What You Hear?</h3>
+	<h3 class="teamStructure__cta">Like What You're Reading?</h3>
 	<a class="btn btn--apple hvr-ripple-out md-trigger" data-modal="modal-13">Let's Talk</a>
 </section>
