design changes on email signature and blog

--- a/_sass/_blogfeed.sass
+++ b/_sass/_blogfeed.sass
@@ -20,6 +20,21 @@ header.page-header
     margin: 0 10%
     line-height: 30px
 
+header.page-header-blog
+  min-height: 480px
+  background-color: $slate-purple
+  background-image: url(../img/stripes-deco.svg)
+  background-repeat: no-repeat
+  background-position: center bottom
+  background-size: 1140px
+
+  h1
+    color: $white
+    text-align: center
+    margin: 80px 5% 10px 5%
+    text-transform: uppercase
+    font-size: 3.2em
+
 aside.categories-nav
   max-width: 1100px
   margin: 0 auto
@@ -136,14 +151,13 @@ aside.categories-nav
   font-size: $normal
 
 h2.blog-card-title
-  font-size: $title
+  font-size: 1.4em
   a
     font-size: inherit
     color: $black-80
     margin: 20px
     text-align: center
     display: block
-    padding: 0 5%
     &:hover
       color: $apple-green
       text-decoration: none
@@ -195,7 +209,11 @@ h2.blog-card-title
   .blog-card
     width: 90%
 
-  .page-header
+  .page-header-blog
     h1
-      font-size: $headline
+      font-size: 3.2em
+      color: #ffffff
+      text-align: center
+      margin: 80px 5% 10px 5%
+      text-transform: uppercase
 
