--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: blogHome
 ---
 
-<header class="page-header">
+<header class="page-header  page-header-blog">
 	{% include menu.html %}
 	<h1>{{ page.title }}</h1>
 </header>
