reduce space in sections

--- a/_sass/_ourwork.sass
+++ b/_sass/_ourwork.sass
@@ -6,7 +6,7 @@ header.page-header--ourwork h1
   width: 100%
   margin: 0 auto
   position: relative
-  padding: 70px 0
+  padding: 25px 0
 
   &:after
     content: ""
@@ -25,7 +25,7 @@ header.page-header--ourwork h1
 
   .casestudy
     max-width: 1100px
-    margin: 80px auto
+    margin: 50px auto
     display: flex
     box-shadow: $shadow-two
     border-radius: $radius
@@ -134,6 +134,7 @@ header.page-header--ourwork h1
 @media (min-width: $screen-xm-min) and (max-width: $screen-sm-min)
   header.page-header--ourwork h1
     margin: 65px 5% 10px 5%
+    font-size: 45px
 
   #ourwork
     padding: 10px 15px
