--- a/_includes/team-members-filter.html
+++ b/_includes/team-members-filter.html
@@ -7,7 +7,7 @@
 
 <div class="team-filter-mobile">
 	<div class="dropdown">
-		<button onclick="myFunction()" class="dropbtn"><span class="dropbtn-text"></span><img style="width: 12px" src="img/triangle.svg" alt=""></button>
+		<button onclick="myFunction()" class="dropbtn"><span class="dropbtn-text"></span><img style="width: 12px" src="img/triangle.svg" alt=""> Team</button>
 			<div id="myDropdown" class="dropdown-content">
 				{% for department in site.data.departments.data %}
 					<a onclick="filterTeam('{{department.name}}')" id="{{ department.name | downcase | replace: ' ', '-' }}-item">{{department.name}}</a>
