--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -1,12 +1,12 @@
 header
-  background: $slate-purple url(../img/bg-photo-2018.jpg) no-repeat center bottom
+  background: $slate-purple url(../img/bg-photo-2018.jpg) no-repeat center 
   background-size: cover
-  min-height: 800px
+  min-height: 700px
 
   .hero-header
     max-width: 900px
     margin: 0 auto
-    padding-top: 100px
+    padding-top: 70px
     color: #ffffff
     &__phrase
       font-weight: 800
@@ -107,7 +107,7 @@ header
 #StressFreeWizardry
   max-width: 1100px
   margin: 0 auto
-  padding: 120px 5% 80px
+  padding: 60px 5% 30px
   text-align: center
   color: $black-80
   p
@@ -260,7 +260,7 @@ header
     -webkit-border-radius: 400px
     -moz-border-radius: 400px
     border-radius: 400px
-    box-shadow: 0px 2px 11px 3px rgba(8, 8, 8, 0.35)
+    box-shadow: 0px 2px 11px 3px rgba(8, 8, 8, 0.10)
   h3
     font-size: $big
     font-weight: 800
@@ -415,7 +415,7 @@ header
   .tech
     max-width: 1100px
     margin: 0 auto
-    padding: 150px 70px
+    padding: 120px 70px
     display: flex
 
   .tech__content
@@ -467,7 +467,7 @@ header
 #teamStructure
   max-width: 760px
   margin: 0 auto
-  padding: 100px 0
+  padding: 50px 0
   text-align: center
   p
     max-width: 890px
