add range salary to job postings and list , add style

--- a/_layouts/job-opening.html
+++ b/_layouts/job-opening.html
@@ -19,7 +19,12 @@ layout: acklen-subfolder
                 </span>
                 <span>{{ page.time }}</span>
             </div>
-            <div class="flex-25"></div>
+            <div class="flex-25 jobPost__description__column">
+                <span>
+                    <img alt="" class="jobPost__description__icon" src="/img/salary-range.svg"/>
+                </span>
+                <span>2,000 - 3,000</span>
+            </div>
             <div class="flex-25"></div>
         </div>
     </section>
