--- a/_includes/jobBoard-include.html
+++ b/_includes/jobBoard-include.html
@@ -27,6 +27,13 @@
                             <span><img alt="" class="jobPost__description__icon" src="../img/{% if job_opening.time == 'Full Time' %}full{% else %}half{% endif %}-time-job.svg"/></span>
                             <span>{{ job_opening.time }}</span>
                         </div>
+                        <div class="flex-25 jobPost__description__column">
+                            <span>
+                                <img alt="" class="jobPost__description__icon" src="/img/salary-range.svg"/>
+                            </span>
+                            <span>2,000 - 3,000</span>
+                        </div>
+                        <div class="flex-25"></div>
                     </div>
                 </div>
                 <div class="jobPost__content flex-25 jobPost__description__column">
