--- a/_includes/jobBoard-include.html
+++ b/_includes/jobBoard-include.html
@@ -13,6 +13,7 @@
         </div>
         {%else%}
         {% for job_opening in job_openings %}
+            {% assign salaryRange = job_opening.salaryRange | strip %}
             <div class="jobPost">
                 <div class="jobPost__content flex-75">
                     <a href="{{ job_opening.url | prepend: base_url }}">
@@ -27,13 +28,15 @@
                             <span><img alt="" class="jobPost__description__icon" src="../img/{% if job_opening.time == 'Full Time' %}full{% else %}half{% endif %}-time-job.svg"/></span>
                             <span>{{ job_opening.time }}</span>
                         </div>
-                        <div class="flex-25 jobPost__description__column">
-                            <span>
-                                <img alt="" class="jobPost__description__icon" src="/img/salary-range.svg"/>
-                            </span>
-                            <span>2,000 - 3,000</span>
-                        </div>
-                        <div class="flex-25"></div>
+                        {% if salaryRange != '' %}
+                          <div class="flex-25 jobPost__description__column">
+                              <span>
+                                  <img alt="" class="jobPost__description__icon" src="/img/salary-range.svg"/>
+                              </span>
+                              <span>{{ salaryRange }}</span>
+                          </div>
+                          <div class="flex-25"></div>
+                        {% endif %}
                     </div>
                 </div>
                 <div class="jobPost__content flex-25 jobPost__description__column">
