Change jobs to careers

--- a/_includes/ContactUs.html
+++ b/_includes/ContactUs.html
@@ -9,7 +9,7 @@
         <div class="flex-33 contact">
             <h4>QUICK LINKS</h4>
             <ul>
-                <li><a href="{{ "/jobs/" | prepend: base_url }}">Jobs</a></li>
+                <li><a href="{{ "/careers/" | prepend: base_url }}">Careers</a></li>
             </ul>
         </div>
         <div class="flex-33 contact">
