--- a/_includes/jobBoard-include.html
+++ b/_includes/jobBoard-include.html
@@ -1,7 +1,7 @@
 {% assign job_openings = site.job_openings | where:"hidden", false %}
 
 <section id="jobs">
-    <h2>Openings</h2>
+    <h2>We're always looking for</h2>
     {% if job_openings == empty %}
         <div class="noPost">
             <p>
