Changed home and team page header backgrounds, display street address in its own line

--- a/_includes/ContactUs.html
+++ b/_includes/ContactUs.html
@@ -3,10 +3,10 @@
     {% include hatchbuckTracking.html %}
 
     <div class="footer__container">
-        <div class="flex-33">
+        <div class="flex-25">
             <img class="footer__logo" src="{{ "/img/aa-logo.svg" | prepend: base_url }}" alt="Acklen Avenue Logo">
         </div>
-        <div class="flex-33 contact">
+        <div class="flex-25 contact">
             <h4>QUICK LINKS</h4>
             <ul>
                 <li><a href="{{ "/careers/" | prepend: base_url }}">Careers</a></li>
@@ -17,17 +17,18 @@
             <ul>
                 <li><a href="tel:615-988-4700">(615) 988-4700</a></li>
                 <li class="contact-info-email"><a href="mailto:&#105;&#110;&#102;&#111;&#064;&#097;&#099;&#107;&#108;&#101;&#110;&#097;&#118;&#101;&#110;&#117;&#101;&#046;&#099;&#111;&#109;;">&#105;&#110;&#102;&#111;&#064;&#097;&#099;&#107;&#108;&#101;&#110;&#097;&#118;&#101;&#110;&#117;&#101;&#046;&#099;&#111;&#109;</a> </li>
-                <li> 1033 Demonbreun Street #300, Nashville, TN 37203 </li>
+                <li>1033 Demonbreun Street #300 </li>
+                <li>Nashville, TN 37203 </li>
              </ul>
         </div>
-         <div class="flex-33 followUs">
+        <div class="flex-25 followUs">
             <h4>Follow Us</h4>
             <ul>
                 <li><a href="https://twitter.com/acklenavenue" target="_blank"><img src="{{ "/img/twitter.svg" | prepend: base_url }}" alt="twitter"></a></li>
                 <li><a href="https://www.facebook.com/acklenavenue/" target="_blank" ><img src="{{ "/img/facebook.svg" | prepend: base_url }}" alt="facebook"></a></li>
                 <li><a href="https://www.linkedin.com/company/acklen-avenue" target="_blank" ><img src="{{ "/img/linkedin.svg" | prepend: base_url }}" alt="linkedin"></a></li>
                 <li><a href="https://github.com/AcklenAvenue" target="_blank" ><img src="{{ "/img/github.svg" | prepend: base_url }}" alt="github"></a></li>
-             </ul>
+            </ul>
         </div>
     </div>
     <hr>
