--- a/_sass/_team.sass
+++ b/_sass/_team.sass
@@ -1,4 +1,8 @@
 
+header.page-header--team
+	background: $slate-purple url(../img/team-bg-photo-2018.jpg) no-repeat center
+	background-size: cover
+
 .member-card
 	width: 260px
 	max-height: 426px
