Google Ads Landing Page
+ Google Fonts Fix
Removed the font request from the CSS (unsupported now) file and placed it in the Head as a <link>

--- a/css/main.sass
+++ b/css/main.sass
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import url(https://fonts.googleapis.com/css?family=Montserrat:300)
+
 
 html
   box-sizing: border-box
@@ -289,6 +289,8 @@ nav
 
 .nav-bullets
   display: flex
+  align-items: center
+  justify-content: center
 
 .nav-bullets li
   padding: 12px 0 12px 28px
@@ -335,3 +337,4 @@ input[type="submit"]:disabled
 @import _jobs
 @import _404
 @import _team
+@import _landing-ad
