--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,5 +30,7 @@
     <meta name="theme-color" content="#72C02C">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="{{ "css/main.css" | prepend: full_base_url }}">
-	<link rel="stylesheet" type="text/css" href="{{ "css/modal.css" | prepend: full_base_url }}" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{{ "css/modal.css" | prepend: full_base_url }}" />
+    
 </head>
