--- a/_sass/_landing-ad.sass
+++ b/_sass/_landing-ad.sass
@@ -102,7 +102,7 @@
 			font-weight: bold
 			display: block
 			padding-bottom: 4px
-			color: rgba(0,0,0,0.30);
+			color: rgba(0,0,0,0.30)
 
 @media (min-width: $screen-md-min)
 	.ad-testimonials-wrapper
