--- a/css/main.sass
+++ b/css/main.sass
@@ -280,7 +280,7 @@ ul.check
 nav
   max-width: 1200px
   margin: 0 auto
-  height: 120px
+  min-height: 120px
   justify-content: space-between
   display: flex
   align-items: center
@@ -326,6 +326,13 @@ input[type="submit"]:disabled
   .nav-bullets li a
     display: inline-block
     font-size: 16px
+
+@media (max-width: $screen-sm-min)
+  .nav-bullets
+    width: 100%
+
+::-webkit-input-placeholder
+  color: $black-30
 
 @import _home
 @import _contact
