Colleen's Updates + Crawler Blocks

--- a/_layouts/landingAd.html
+++ b/_layouts/landingAd.html
@@ -3,7 +3,7 @@
 
 <!DOCTYPE html>
 <html lang="en-US">
-    {% include head-subfolder.html %}
+    {% include head-noindex.html %}
     <body>
         <main>
             {{ content }}
