--- a/_sass/_landing-ad.sass
+++ b/_sass/_landing-ad.sass
@@ -58,7 +58,7 @@
 
 		h2
 			color: white
-			font-size: 220%
+			font-size: 180%
 			font-weight: 300
 			span.big
 				font-weight: bold
@@ -76,8 +76,13 @@
 			img
 				max-width: 100px
 				max-height: 72px
-				height: auto
 				width: auto
+			a
+				display: block
+				text-decoration: none
+				transition: 0.2s
+			a:hover
+				transform: translateY(-3px)
 
 	main
 		margin-top: -110px
@@ -114,7 +119,7 @@
 		display: block
 		-webkit-font-smoothing: antialiased
 
-	.pain-points
+	.project-feats
 		padding: 40px 0
 		display: block
 		font-size: 110%
@@ -124,13 +129,23 @@
 			width: auto
 			vertical-align: sub
 
-		.points-label
+		.label
 			text-transform: uppercase
 			font-size: 13px
 			font-weight: bold
 			display: block
 			padding-bottom: 4px
 			color: rgba(0,0,0,0.30)
+	ul
+		list-style: none
+		margin: 0
+		line-height: 1.6
+		li
+			img
+				max-height: 20px
+				width: auto
+				margin-right: 16px
+				vertical-align: sub
 
 @media (min-width: $screen-md-min)
 	.ad-testimonials-wrapper
@@ -161,7 +176,7 @@
 				img
 					width: auto
 					height: auto
-					max-height: 96px
+					max-height: 72px
 			.title
 				flex: 0 1 100%
 				padding-left: 48px
@@ -187,9 +202,9 @@
 		display: flex
 		justify-content: center
 		flex-direction: column
-		margin: 190px auto 60px auto
+		margin: 20px auto 0px auto
 		padding: 0 5%
-		max-width: 960px
+		max-width: 1100px
 
 	.section-title
 		text-align: center
@@ -207,7 +222,7 @@
 			font-weight: bold
 
 	ul
-		margin: 80px auto
+		margin: 40px auto
 		padding: 0 5%
 		max-width: 960px
 		list-style: none
@@ -226,7 +241,7 @@
 				img
 					width: auto
 					height: auto
-					max-height: 72px
+					max-height: 96px
 					display: block
 					margin: 0 auto
 			.title	
@@ -235,6 +250,7 @@
 					font-size: 80%
 					text-transform: uppercase
 					text-align: center
+					color: $black-80
 
 @media (min-width: $screen-sm-min)
 	#industry-experience
@@ -244,13 +260,13 @@
 
 		.section-title
 			text-align: right
-			padding-right: 10%
+			padding-right: 5%
 			padding-bottom: 60px
-			width: 60%
+			width: 45%
 		ul
 			justify-content: center
 			padding: 0
-			width: 40%
+			width: 55%
 			li
 				width: 33%
 				max-width: 400px
