--- a/_sass/_landing-ad.sass
+++ b/_sass/_landing-ad.sass
@@ -1,6 +1,6 @@
 .page-header.landing	
-	height: initial
-	min-height: 90vh
+	height: 90vh
+	max-height: 600px
 	h1
 		font-size: 48px
 		text-transform: initial
@@ -18,6 +18,7 @@
 @media (max-width: $screen-sm-min)
 	.page-header.landing
 		min-height: 100vh
+		max-height: initial
 		padding-bottom: 120px
 		h1
 			font-size: 36px
