Unify Headline Styling

--- a/_sass/_landing-ad.sass
+++ b/_sass/_landing-ad.sass
@@ -2,9 +2,10 @@
 	height: 90vh
 	max-height: 600px
 	h1
-		font-size: 48px
+		font-size: 42px
 		text-transform: initial
 		margin: 10vh 5% 0px 5%
+		font-weight: 400
 	h2
 		font-size: 36px
 		margin-top: 0
@@ -203,7 +204,7 @@
 		display: flex
 		justify-content: center
 		flex-direction: column
-		margin: 20px auto 0px auto
+		margin: 15vh auto 15vh auto
 		padding: 0 5%
 		max-width: 1100px
 
@@ -253,7 +254,7 @@
 					text-align: center
 					color: $black-80
 
-@media (min-width: $screen-sm-min)
+@media (min-width: $screen-md-min)
 	#industry-experience
 		.wrapper 
 			flex-direction: row
