More Big Screen Tweaks

--- a/_sass/_landing-ad.sass
+++ b/_sass/_landing-ad.sass
@@ -4,8 +4,10 @@
 	h1
 		font-size: 42px
 		text-transform: initial
-		margin: 10vh 5% 0px 5%
+		margin: 10vh auto 0px auto
+		padding: 0 5%
 		font-weight: 400
+		max-width: 1280px
 	h2
 		font-size: 36px
 		margin-top: 0
