--- a/css/main.sass
+++ b/css/main.sass
@@ -311,6 +311,7 @@ nav
   color: $white
 input[type="submit"]
   cursor: pointer
+  appearance: none
   
 input[type="submit"]:disabled 
   background: $black-30
