Ruthie's Thursday Edits

--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -432,6 +432,7 @@ header
       padding: 40px
 
   ul.tech__tabs li
+    color: $black-50
     box-shadow: $shadow-one
     border-radius: $radius
     cursor: pointer
