--- a/_sass/_landing-ad.sass
+++ b/_sass/_landing-ad.sass
@@ -300,7 +300,7 @@
 	.cta-cue
 		text-align: center
 		font-size: 160%
-		margin-bottom: 60px
+		margin-bottom: 0px
 		flex: 0 1 100%
 		letter-spacing: 0
 		p
@@ -308,6 +308,7 @@
 			margin: 0 auto
 			line-height: 1.7
 			letter-spacing: 0
+			font-weight: 300
 		img
 			max-height: 96px
 			width: auto
@@ -341,7 +342,7 @@
 		display: flex
 		flex-wrap: wrap
 		justify-content: center
-		padding: 60px 0 80px 0
+		padding: 10px 0 80px 0
 
 		.section-title
 			box-sizing: border-box
