Changed header hero words, adjusted animation to last longer due to decreased number of hero words

--- a/_includes/homeHeader.html
+++ b/_includes/homeHeader.html
@@ -1,22 +1,15 @@
 
 <div class="hero-header">
-	<p class="first-sentence">Your</p>
+	<p class="first-sentence">Complete agile teams</p>
+	<p class="last-sentence"><span> as a service that</span></p>
 		<div class="hero-header__phrase hero-animate-words hero-words">
-		      <span>Industry Disrupting</span>
-					<span>Elegantly Simple</span>
-					<span>Customer Delighting</span>
-		      <span>Utterly Life-Changing</span>
-					<span>Envelope-Pushing</span>
-					<span>Ground-Breaking</span>
-					<span>Earth-Shaking</span>
-		      <span>History-Making</span>
-					<span>Singularly Innovative</span>
-					<span>Large Scale</span>
-					<span>Swing for the Fences</span>
+			<span>Spin up seamlessly</span>
+			<span>Partner collaboratively</span>
+			<span>Deliver value relentlessly</span>
 		</div>
-	 <p class="last-sentence"><span>Vision</span>, Brought To Life</p>
+	 
 
-	<h1>We craft custom web and mobile applications at the speed of opportunity, for innovators who want to get stuff done.</h1>
+	<h1 class="header-secondary-title">We craft custom web and mobile applications at the speed of opportunity, for innovators who want to get stuff done.</h1>
 	<a class="btn hvr-ripple-out btn--apple md-trigger"  data-modal="modal-13">Let's create together</a>
 	<a href="#StressFreeWizardry"><img class="down-arrow" src="img/triangle.svg" alt="Down Arrow"></a>
 </div>
