--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -34,7 +34,7 @@ header
       text-transform: uppercase
 
   .header-secondary-title
-    margin-top: 60px;
+    margin-top: 60px
 
   .down-arrow
     position: absolute
